# rgine

./: Cargo.toml  README.md  todo.txt
.github/workflows/: rust.yml
core/assets/: Cargo.toml
core/assets/src/: lib.rs
core/graphics/: Cargo.toml
core/graphics/examples/: simple.rs
core/graphics/src/: color.rs  ctx.rs  lib.rs
core/logger/: Cargo.toml
core/logger/src/: lib.rs
core/modules/: Cargo.toml
core/modules/examples/: proxy.rs  walkthrough.rs
core/modules/src/: events.rs  lib.rs  standards.rs  utils.rs
core/platform/: Cargo.toml
core/platform/examples/: windowed.rs
core/platform/src/: window.rs
core/platform/src/window/: mod.rs  module.rs
examples/: walkthrough.rs
examples/render2d/: Cargo.toml
examples/render2d/src/: main.rs
examples/window2d/: Cargo.toml
examples/window2d/src/: main.rs
modules/disk_assets/: Cargo.toml
modules/disk_assets/src/: lib.rs
modules/renderer_2d/: Cargo.toml
modules/renderer_2d/src/: lib.rs  renderer.rs  texture.rs
src/: events.rs  lib.rs  standards.rs
