[package]
name = "rgine"
version = "0.1.0"
edition = "2021"

[dependencies]

# Core
rgine_modules = { path = "core/modules/"}
rgine_platform = { path = "core/platform/", default-features = false}
rgine_assets = { path = "core/assets/" }
rgine_logger = { path = "core/logger/" }
rgine_graphics = { path = "core/graphics/", optional = true }

# External
cgmath = "0.18.0"

# Modules
rgine_renderer_2d = { path = "modules/renderer_2d", optional = true }

[features]
schedulelog = ["rgine_modules/debuglog"]

graphics = ["rgine_platform/window", "dep:rgine_graphics"]
2d = ["graphics", "dep:rgine_renderer_2d"]

default = ["graphics"] ##TODO: nice default features

[workspace]
members = [
  ".", 
  "core/*",
  "modules/*",
  "examples/*", 
] 