[package]
name = "rgine"
version = "0.1.0"
edition = "2021"

[dependencies]

# Core
rgine_modules = { path = "core/modules/"}
rgine_platform = { path = "core/platform/", default-features = false}
rgine_assets = { path = "core/assets/" }
rgine_logger = { path = "core/logger/" }
rgine_graphics = { path = "core/graphics/", optional = true }

# External
cgmath = "0.18.0"

# Modules
rgine_renderer_2d = { path = "modules/renderer_2d", optional = true }
rgine_disk_assets = { path = "modules/disk_assets", optional = true }

[features]
schedulelog = ["rgine_modules/debuglog"]
assets_loader = [ "dep:rgine_disk_assets"]

graphics = ["rgine_platform/window", "dep:rgine_graphics"]
2d = ["graphics", "dep:rgine_renderer_2d"]

default = ["graphics", "assets_loader"] ##TODO: should we add 2d by default? or wait for 3d support????

[workspace]
members = [
  ".", 
  "core/*",
  "modules/*",
  "examples/*", 
] 