[package]
name = "rgine_disk_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgine_modules = { path = "../../core/modules" }
rgine_assets = { path = "../../core/assets" }
rgine_logger = { path = "../../core/logger" }