[package]
name = "rgine_renderer_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgine_modules = { path = "../../core/modules" }
rgine_graphics = { path = "../../core/graphics" }

wgpu = "0.20.0"
cgmath = "0.18.0"
texture_packer = { version = "0.28.0", default-features = false, features = [
    "png",
]}
bytemuck = { version = "1.16.0", features = ["derive"] }